--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Motivations Maxime</title>
@@ -9,9 +10,17 @@
     <script src='main.js'></script>
 </head>
 <body>
+
         <h1> Heusicom Maxime </h1>
 
-        <h2> Ma vie jusque là a été remplie d&#39;expérience variée et d&#39;apprentissage. Ce que je suis aujourd&#39;hui, c&#39;est encore et otuours un apprenant qui à de l&#39;intérêt pour tout. Ce que je veux devenir, un codeur qui fait bien son job et sur qui on peut compter. </h2>
+
+
+
+        <h2> Ma vie jusque là a été remplie d&#39;expérience variée et d&#39;apprentissage.</h2>
+
+        <h2> Ce que je suis aujourd&#39;hui, c&#39;est encore et toujours un apprenant qui à de l&#39;intérêt pour tout.</h2>
+        
+        <h2> Ce que je veux devenir, un codeur qui fait bien son job et sur qui on peut compter. </h2>
 </body>
 </html>
 
